[package]
name = "bigpictureback"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.4"
actix-multipart = "0.6"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
image = "0.24"
webp = "0.2"
env_logger = "0.10"
log = "0.4"
anyhow = "1.0"
futures = "0.3"
futures-util = "0.3"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }
serde_with = "3.14.0"
dotenv = "0.15.0"
